--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,50 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
+async-timeout==4.0.2
+attrs==23.1.0
 autopep8==2.0.2
+blinker==1.6.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
 click==8.1.3
+colorama==0.4.6
+distro==1.8.0
+docopt==0.6.2
 et-xmlfile==1.1.0
 Flask==2.3.2
+frozenlist==1.3.3
+h11==0.14.0
+httpcore==1.0.1
+httpx==0.25.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+multidict==6.0.4
 numpy==1.24.3
-openai==0.27.6
+openai==1.1.1
 openpyxl==3.1.2
 pandas==2.0.1
 pandas-stubs==2.0.1.230501
+pipreqs==0.4.13
+pur==7.1.0
 pycodestyle==2.10.0
+pydantic==2.4.2
+pydantic_core==2.10.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 requests==2.30.0
 six==1.16.0
+sniffio==1.3.0
 toml==0.10.2
 tqdm==4.65.0
+types-pytz==2023.3.0.0
+typing_extensions==4.8.0
+tzdata==2023.3
 urllib3==2.0.2
 Werkzeug==2.3.4
+yarg==0.1.9
+yarl==1.9.2
